--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
+bcrypt==3.1.7
+cffi==1.14.0
 Click==7.0
 Flask==1.1.1
+Flask-Bcrypt==0.7.1
 Flask-SQLAlchemy==2.4.1
+Flask-WTF==0.14.3
 itsdangerous==1.1.0
 Jinja2==2.11.1
 MarkupSafe==1.1.1
 pkg-resources==0.0.0
+pycparser==2.19
 PyMySQL==0.9.3
+six==1.14.0
 SQLAlchemy==1.3.13
 Werkzeug==1.0.0
+WTForms==2.2.1
